add list outlet
