# controllers/group/cont_groups.go
@@ -162,7 +162,7 @@ func (c *ContRoles) GetById(e *gin.Context) {
 // @Param page query int true "Page"
 // @Param perpage query int true "PerPage"
 // @Param search query string false "Search"
-// @Param initsearch query string false "InitSearch"
+// @Param init_search query string false "InitSearch"
 // @Param sortfield query string false "SortField"
 // @Success 200 {object} models.ResponseModelList
 // @Router /v1/cms/roles [get]
